// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataCollectorsCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-2"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    insights-client
                  </span>
                </dt>
                <dd
                  aria-label="insights-client value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="insights-client value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-1"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-2"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                        <span
                          class="pf-v6-c-icon"
                          style="margin-left: 4px; margin-right: 4px;"
                        >
                          <span
                            class="pf-v6-c-icon__content pf-m-success"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                              />
                            </svg>
                          </span>
                        </span>
                        Active
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-3"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Insights Client ID: 1234
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-4"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 13 May 2022 07:42 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    subscription-manager
                  </span>
                </dt>
                <dd
                  aria-label="subscription-manager value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="subscription-manager value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-5"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-6"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-7"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Subscription Manager ID: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-8"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Satellite
                  </span>
                </dt>
                <dd
                  aria-label="Satellite value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Satellite value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-9"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-10"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-11"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Satellite ID: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-12"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Discovery
                  </span>
                </dt>
                <dd
                  aria-label="Discovery value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Discovery value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-13"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-14"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-15"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Discovery ID: N/A
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-16"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: N/A
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataCollectorsCard should render custom collectors 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="dataCollector-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-3"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Data collectors
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Data collectors title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Data collectors title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    collector name
                  </span>
                </dt>
                <dd
                  aria-label="collector name value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="collector name value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <ul
                      class="pf-v6-c-content--ul pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Content-17"
                      data-ouia-component-type="PF6/Content"
                      data-ouia-safe="true"
                      data-pf-content="true"
                    >
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-18"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Status:
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-19"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        reporter id: 1234567
                      </li>
                      <li
                        class="pf-v6-c-content--li"
                        data-ouia-component-id="OUIA-Generated-Content-20"
                        data-ouia-component-type="PF6/Content"
                        data-ouia-safe="true"
                        data-pf-content="true"
                      >
                        Last upload: 01 Jan 2260 00:00 UTC
                      </li>
                    </ul>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
